--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <button onclick="playSound('sound2')">Sound 2</button>
 <button onclick="playSound('sound3')">Sound 3</button>
 
-<audio id="sound1" src="assets/a.mp3"></audio>
-<audio id="sound2" src="assets/b.mp3"></audio>
-<audio id="sound3" src="assets/c.mp3"></audio>
+<audio id="sound1" src="assets/a.wav"></audio>
+<audio id="sound2" src="assets/b.wav"></audio>
+<audio id="sound3" src="assets/c.wav"></audio>
 
 <script>
 function playSound(soundId) {
