--- a/index.html
+++ b/index.html
@@ -2,6 +2,38 @@
 <html>
 <head>
 <title>Soundboard</title>
+<style>
+body {
+  background-color: #111; /* Dark background */
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center horizontally */
+  justify-content: center; /* Center vertically */
+  min-height: 100vh; /* Ensure full viewport height */
+  margin: 0;
+  font-family: sans-serif;
+}
+
+button {
+  background-color: #333; /* Darker button background */
+  color: #eee; /* Light text color */
+  border: none;
+  padding: 20px 40px; /* Bigger buttons */
+  margin: 10px;
+  border-radius: 5px; /* Rounded corners */
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease; /* Smooth transition */
+}
+
+button:hover {
+  background-color: #555; /* Lighter on hover */
+}
+
+audio {
+  display: none; /* Hide audio players */
+}
+</style>
 </head>
 <body>
 
@@ -9,9 +41,9 @@
 <button onclick="playSound('sound2')">Sound 2</button>
 <button onclick="playSound('sound3')">Sound 3</button>
 
-<audio id="sound1" src="assets/a.wav"></audio>
-<audio id="sound2" src="assets/b.wav"></audio>
-<audio id="sound3" src="assets/c.wav"></audio>
+<audio id="sound1" src="a.wav"></audio>
+<audio id="sound2" src="b.wav"></audio>
+<audio id="sound3" src="c.wav"></audio>
 
 <script>
 function playSound(soundId) {
