--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ audio {
 <button onclick="playSound('sound2')">Sound 2</button>
 <button onclick="playSound('sound3')">Sound 3</button>
 
-<audio id="sound1" src="a.wav"></audio>
-<audio id="sound2" src="b.wav"></audio>
-<audio id="sound3" src="c.wav"></audio>
+<audio id="sound1" src="assets/a.wav"></audio>
+<audio id="sound2" src="assets/b.wav"></audio>
+<audio id="sound3" src="assets/c.wav"></audio>
 
 <script>
 function playSound(soundId) {
